--- a/site/css/skeleton-1200/skeleton.css
+++ b/site/css/skeleton-1200/skeleton.css
@@ -5,6 +5,7 @@
 * Free to use under the MIT license.
 * http://www.opensource.org/licenses/mit-license.php
 * 8/17/2011
+* Added an 1200 version for kicks.
 */
 
 
