--- a/site/css/mozajik-gui.css
+++ b/site/css/mozajik-gui.css
@@ -221,7 +221,7 @@
 			-webkit-box-shadow: 0px 0px 20px 0px #000000;
 			-moz-box-shadow: 0px 0px 20px 0px #000000;
 			box-shadow: 0px 0px 20px 0px #000000;
-			overflow: visible;
+			overflow: auto;
 		}
 			a.popover.close{
 				position: absolute;
