Adding better serialized editor.
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@59 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/plugins/_mootools/view/field/serialized.field.html
+++ b/plugins/_mootools/view/field/serialized.field.html
@@ -1,8 +1,15 @@
 	<div id='{{field.id}}'>
 	{% if field.value %}
 		{% foreach field.value as val %}
-			<input class='field text' type='text' name='{{field.name}}[]' value='{{val|escape}}'>
+			<label><input class='field text' type='text' name='{{field.name}}[]' value='{{val|escape}}'> <a href="#delete" onclick="$(this).getParent('label').destroy();">X</a></label>
 		{% endforeach %}
 	{% endif %}
 	</div>
-	<a class="icon tiny add" onclick="var el = new Element('input', {'name': '{{field.name}}[]', 'class': 'field text', 'type': 'text'}); el.inject('{{field.id}}');">New</a>
+	<a class="icon tiny add" onclick="add_field_{{field.uid}}();">New</a>
+	
+	<script language="javascript">
+		function add_field_{{field.uid}}(){
+			var chtml = $('{{field.id}}').get('html');
+			$('{{field.id}}').set('html', chtml+"<label><input class='field text' type='text' name='{{field.name}}[]' value=''> <a href=\"#delete\" onclick=\"$(this).getParent('label').destroy();\">X</a></label>");
+		}
+	</script>
