Bugfixes for serialized field.
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@60 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/plugins/_mootools/view/field/serialized.field.html
+++ b/plugins/_mootools/view/field/serialized.field.html
@@ -9,7 +9,8 @@
 	
 	<script language="javascript">
 		function add_field_{{field.uid}}(){
-			var chtml = $('{{field.id}}').get('html');
-			$('{{field.id}}').set('html', chtml+"<label><input class='field text' type='text' name='{{field.name}}[]' value=''> <a href=\"#delete\" onclick=\"$(this).getParent('label').destroy();\">X</a></label>");
+			var div = new Element('label');
+			div.set('html', "<input class='field text' type='text' name='{{field.name}}[]' value=''> <a href=\"#delete\" onclick=\"$(this).getParent('label').destroy();\">X</a>");
+			$('{{field.id}}').appendChild(div);
 		}
 	</script>
