Revamping conf system, adding recommended version upgrades, adding bootstrap files.
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@65 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/app/view/update/update-errors.html
+++ b/app/view/update/update-errors.html
@@ -1,6 +1,6 @@
-{% extends 'base-system.html' %}
+{% extends 'update/update-menu.html' %}
 
-{% block content %}
+{% block updatecontent %}
 
 <h2>A total of {{errors|total}} errors/warnings/notices were generated since you last cleared the log.</h2>
 
@@ -20,4 +20,4 @@
 	<p align='center'>{{errors.pagination.prev}} {{errors.pagination.next}}</p>
 
 
-{% endblock content %}
+{% endblock %}
