--- a/app/view/update/update-log.html
+++ b/app/view/update/update-log.html
@@ -4,7 +4,14 @@
 {% endblock onload %}
 
 {% block body %}
- 	{{content}}
+	<style type="text/css">
+		body{
+			color: white;
+		}
+	</style>
+
+	{{content}}
+	
 {% endblock body %}
 
 
