--- a/app/view/base-system.html
+++ b/app/view/base-system.html
@@ -4,13 +4,14 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
 		<!-- stylesheets -->
-		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/skeleton/base.css?1.0">
-
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/mozajik-system.css?3.2">
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/mozajik-gui.css?1.0">
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/mozajik-admin.css?1.1">
 
-
+		<!-- bootstrap -->
+		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/css/bootstrap-responsive.min.css">
+		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/css/bootstrap.min.css">
+		
 		<!-- javascripts -->
 		<script language="JavaScript" src="{{baseurl}}system/js/mootools/mootools-core-1.3.js" type="text/javascript"></script>
 		<script language="JavaScript" src="{{baseurl}}system/js/mootools/mootools-more-1.3.js" type="text/javascript"></script>
