--- a/app/view/update/update-cache.html
+++ b/app/view/update/update-cache.html
@@ -1,6 +1,6 @@
-{% extends 'base-system.html' %}
+{% extends 'update/update-menu.html' %}
 
-{% block content %}
+{% block updatecontent %}
 
 {% if get.force %}
 you have successfully purged {{folder}} of all object cache files. they will be regenerated on request, so server load may be higher
@@ -15,4 +15,4 @@ you will now delete object cache files in {{folder}}. are you sure you want to c
 - <a href='{{baseurl}}update/'>back to the update menu</a> -<br>
 <hr>
 
-{% endblock content %}
+{% endblock updatecontent %}
