--- a/app/view/update/update-menu.html
+++ b/app/view/update/update-menu.html
@@ -1,6 +1,21 @@
 {% extends 'base-system.html' %}
 
 {% block content %}
+
+{% if conf_upgrade %}
+	<div class="alert center">
+	  <strong>Warning!</strong> You are recommended to update your Mozajik config file (site/index.php) to version {{conf_upgrade}}.
+	</div>
+{% endif %}
+{% if htver_upgrade %}
+	<div class="alert center">
+	  <strong>Warning!</strong> You are recommended to update your Mozajik htaccess file (.htaccess) to version {{htver_upgrade}}.
+	</div>
+{% endif %}
+
+
+{% block updatecontent %}
+
 <big>The following system update options are available:</big><br><br>
 	{% if mysql_enabled %}
 	- <a href='{{baseurl}}update/errors/'>display error log</a> - show a list of errors and related debug info<br>
@@ -16,11 +31,18 @@
 	<hr>
 	- <a href='{{baseurl}}update/install/'>install/update version</a> - updates your data files and db to the latest version if needed<br>
 	<hr>
+{% endblock updatecontent %}
+
+<br/>
 
 {% if zaj.debug_mode %}
-	<h3 align="center" style="color: orange;">Mozajik is running in debug mode!</h3>
+	<div class="alert alert-error center">
+		<strong>Mozajik is running in debug mode!</strong> Page loads are slower and more information is displayed in the console.
+	</div>
 {% elseif %}
-	<h3 align="center" style="color: green;">Mozajik is running in production mode!</h3>
+	<div class="alert alert-success">
+		<strong>Mozajik is running in production mode.</strong> Everything looks fine!
+	</div>
 {% endif %}
 
 {% endblock content %}
