--- a/site/css/mozajik-admin.css
+++ b/site/css/mozajik-admin.css
@@ -290,6 +290,7 @@
 		margin-top: 30px;
 		padding-bottom: 3px;
 		border-bottom: 1px dotted grey;
+		margin-bottom: 15px;
 	}
 	div.admin.content hr{
 		border-style: none;
