JS and CSS. [deploy: live]
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@76 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/site/css/mozajik-gui.css
+++ b/site/css/mozajik-gui.css
@@ -222,7 +222,8 @@
 			-webkit-box-shadow: 0px 0px 20px 0px #000000;
 			-moz-box-shadow: 0px 0px 20px 0px #000000;
 			box-shadow: 0px 0px 20px 0px #000000;
-			overflow: auto;
+			overflow: hidden;
+			overflow-y: auto;
 		}
 			a.popover.close{
 				position: absolute;
