Removing console.log()
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@81 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/plugins/_dojo/view/field/manytomany.field.html
+++ b/plugins/_dojo/view/field/manytomany.field.html
@@ -22,7 +22,7 @@
 			// I HAVE TO DO THIS UP ABOVE!
 			
 			{% foreach field.value as item %}
-				console.log(dojo.byId("{{field.uid}}-{{item.id}}"));
+				//console.log(dojo.byId("{{field.uid}}-{{item.id}}"));
 				//dojo.byId("{{field.uid}}-{{item.id}}").selected = true;
 				values.push('{{item.id}}');
 			{% endforeach %}
