All files converted to new system.
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@93 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/app/view/update/update-menu.html
+++ b/app/view/update/update-menu.html
@@ -24,7 +24,7 @@
 	{% elseif %}
 	- <span style="color: silver;">error log disabled</span> - error log requires database accesss<br>
 	<hr>
-	- <span style="color: silver;">database model disabled</span> - you can enable it by changing the <em>zaj_mysql_enabled</em> setting<br/>
+	- <span style="color: silver;">database model disabled</span> - you can enable it by changing the <em>mysql_enabled</em> setting<br/>
 	{% endif %}
 	- <a href='{{baseurl}}update/cache/'>reset object cache</a> - delete and regenerate object cache files<br>
 	- <a href='{{baseurl}}update/template/'>reset template, conf, and lang cache</a> - delete and regenerate template, conf, and lang cache files<br>
