Removing background pattern.
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@97 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/site/css/mozajik-admin.css
+++ b/site/css/mozajik-admin.css
@@ -78,8 +78,8 @@
 		margin-left: -475px;
 		padding: 50px 25px 25px 25px;
 		background-color: #ebebeb;	
-		background-image: url(../system/img/update/back-white.jpg);
-		background-repeat: repeat;
+		/*background-image: url(../system/img/update/back-white.jpg);
+		background-repeat: repeat;*/
 		border: 1px solid #5d5d5d;
 		border-radius: 10px;
 		color: #2a2a2a;
