--- a/app/view/base-system.html
+++ b/app/view/base-system.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/mozajik-gui.css?1.0">
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/mozajik-admin.css?1.1">
 		
+		{% block javascripts %}
 		<!-- javascripts -->
 		<script language="JavaScript" src="{{baseurl}}system/js/mootools/mootools-core-1.3.js" type="text/javascript"></script>
 		<script language="JavaScript" src="{{baseurl}}system/js/mootools/mootools-more-1.3.js" type="text/javascript"></script>
@@ -19,6 +20,7 @@
 		<script language="JavaScript" src="{{baseurl}}system/js/mozajik-base-1.3.js" type="text/javascript"></script>
 		<script language="JavaScript" src="{{baseurl}}system/js/mozajik-tool-1.3.js" type="text/javascript"></script>
 		<script language="JavaScript" src="{{baseurl}}system/js/mozajik-gui-1.3.js" type="text/javascript"></script>
+		{% endblock javascripts %}
 				
 		{{zaj.js}} 
 
