--- a/app/view/base-system.html
+++ b/app/view/base-system.html
@@ -7,10 +7,12 @@
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/css/bootstrap-responsive.min.css">
 
+		{% block mozajikstyles %}
 		<!-- stylesheets -->
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/mozajik-system.css?3.2">
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/mozajik-gui.css?1.0">
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/mozajik-admin.css?1.1">
+		{% endblock mozajikstyles %}
 		
 		{% block javascripts %}
 		<!-- javascripts -->
