--- a/app/view/base-system.html
+++ b/app/view/base-system.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
+		{% block bootstrapstyles %}
 		<!-- bootstrap -->
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/css/bootstrap-responsive.min.css">
+		{% endblock bootstrapstyles %}
 
 		{% block mozajikstyles %}
 		<!-- stylesheets -->
