Fixing to new zaj.get variable
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@192 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/app/view/system/yui/base-yui.html
+++ b/app/view/system/yui/base-yui.html
@@ -18,8 +18,8 @@
 		// set variables
 			var zajyuiobj = function(){
 				// create my references to the parent page
-					this.field = parent.document.getElementById('{{get.id}}');
-					this.iframe = parent.document.getElementById('{{get.id}}-iframe');
+					this.field = parent.document.getElementById('{{zaj.get.id}}');
+					this.iframe = parent.document.getElementById('{{zaj.get.id}}-iframe');
 					this.zajlib = parent.zajlib;
 					this.parent = parent;
 				// fire event on field
