--- a/app/view/update/update-log.html
+++ b/app/view/update/update-log.html
@@ -1,17 +1,7 @@
-{% extends 'base-system.html' %}
-
-{% block onload %}
-{% endblock onload %}
+{% extends 'update/base-update.html' %}
 
 {% block body %}
-	<style type="text/css">
-		body{
-			color: white;
-		}
-	</style>
-
 	{{content}}
-	
 {% endblock body %}
 
 
