--- a/app/view/update/update-cache.html
+++ b/app/view/update/update-cache.html
@@ -1,18 +1,18 @@
-{% extends 'update/update-menu.html' %}
+{% extends 'update/base-update.html' %}
 
 {% block updatecontent %}
 
+<h3>Hey, time to reset the object caches!</h3>
+
+<hr/>
+
 {% if get.force %}
-you have successfully purged {{folder}} of all object cache files. they will be regenerated on request, so server load may be higher
+You have successfully purged <code>{{folder}}</code> of all object cache files. They will be regenerated on request, so server load may be higher
 for the next few minutes.
 <pre>{{log}}</pre>
 {% elseif %}
-you will now delete object cache files in {{folder}}. are you sure you want to continue?<br/>
-- <a href='{{baseurl}}update/cache/?force=yes'>okay, go ahead!</a> -<br/>
+You will now delete object cache files in <code>{{folder}}</code>. This will possibly take a long time. Are you sure you want to continue?<br/><br/>
+<a class="btn" href='{{baseurl}}update/cache/?force=yes'>Yeah, understood. Go ahead with it!</a><br/>
 {% endif %}
-
-<br/><br/>
-- <a href='{{baseurl}}update/'>back to the update menu</a> -<br>
-<hr>
 
 {% endblock updatecontent %}
