--- a/app/view/update/update-template.html
+++ b/app/view/update/update-template.html
@@ -1,11 +1,13 @@
-{% extends 'update/update-menu.html' %}
+{% extends 'update/base-update.html' %}
 
 {% block updatecontent %}
 
-<big>The template cache has been reset (deleted {{count}} files).</big><br><br>
- Each template file will now be regenerated upon first request, so server load
-may be significantly higher during the next few requests...	<hr>
-	- <a href='{{baseurl}}update/'>back to the update menu</a> -<br>
-	<hr>
+<h3>Hey, we're resetting the template cache!</h3>
 
+<hr/>
+
+	<div class="alert alert-success">
+		<h5>The template cache has been reset (deleted {{count}} files).</h5>
+	 	Each template file will now be regenerated upon first request, so server load may be significantly higher during the next few requests...
+	</div>
 {% endblock %}
