--- a/plugins/_mootools/view/field/tinymce.field.html
+++ b/plugins/_mootools/view/field/tinymce.field.html
@@ -14,6 +14,10 @@
 		onchange_callback: function(){ tinyMCE.triggerSave(); },
 		handle_event_callback: function(e){  },
 
+		entity_encoding : "raw",
+		keep_styles : true,
+		apply_source_formatting : true,
+
 		// Theme options
 		theme_advanced_buttons1 : "newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,formatselect", //styleselect,fontselect,fontsizeselect
 		theme_advanced_buttons2 : "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,forecolor,backcolor,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,code", //,|,insertdate,inserttime,preview,",
