--- a/app/view/update/base-update.html
+++ b/app/view/update/base-update.html
@@ -53,7 +53,7 @@
 				{% endblock menu %}
 				<hr/>
 				<li><a href='{{baseurl}}'>Go to your project's home</a></li>
-				<li><a href='http://www.mozajik.org/'>Go to Outlast Framework home</a></li>
+				<li><a href='http://framework.outlast.hu/'>Go to Outlast Framework home</a></li>
 				<li><a target="_blank" href='mailto:aron@outlast.hu'>Get support</a></li>
 				<hr/>
 			</ul>
@@ -67,21 +67,21 @@
 				<hr/>
 				{% if conf_upgrade %}
 					<div class="alert center">
-					  <strong>Warning!</strong> You are recommended to update your Mozajik config file (site/index.php) to version {{conf_upgrade}}.
+					  <strong>Warning!</strong> You are recommended to update your OFW config file (site/index.php) to version {{conf_upgrade}}.
 					</div>
 				{% endif %}
 				{% if htver_upgrade %}
 					<div class="alert center">
-					  <strong>Warning!</strong> You are recommended to update your Mozajik htaccess file (.htaccess) to version {{htver_upgrade}}.
+					  <strong>Warning!</strong> You are recommended to update your OFW htaccess file (.htaccess) to version {{htver_upgrade}}.
 					</div>
 				{% endif %}
 				{% if zaj.debug_mode %}
 					<div class="alert alert-error center">
-						<strong>Mozajik is running in debug mode!</strong> Page loads are slower and more information is displayed in the console.
+						<strong>OFW is running in debug mode!</strong> Page loads are slower and more information is displayed in the console.
 					</div>
 				{% elseif %}
 					<div class="alert alert-success">
-						<strong>Mozajik is running in production mode.</strong> Everything looks fine!
+						<strong>OFW is running in production mode.</strong> Everything looks fine!
 					</div>
 				{% endif %}
 		</div>
