Fixing IE8 support.
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@286 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/plugins/_mootools/view/field/manytomany.field.html
+++ b/plugins/_mootools/view/field/manytomany.field.html
@@ -17,7 +17,7 @@
 
 <script language="javascript">
 window.addEvent('domready',function(){
-	(function(){
+	$(function(){
 	{{field.name}}['existing'] = new Hash();
 	{{field.name}}['create'] = new Hash();
 	{{field.name}}['new'] = new Hash();
