All IE forced as flash.
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@290 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/plugins/_mootools/view/field/files.field.html
+++ b/plugins/_mootools/view/field/files.field.html
@@ -18,8 +18,12 @@
 			filelist_{{field.uid}} = new Mozajik.FileList("{{field.id}}-filelist");
 			$('{{field.uid}}-pickfiles').setStyle('display', 'inline');
 
+			var runtime = 'html5,flash,html4';
+			if(Browser.ie) runtime = 'flash';
+
+
 			var uploader_{{field.uid}} = new plupload.Uploader({
-				runtimes : 'html5,flash,html4',
+				runtimes : runtime,
 				browse_button : '{{field.uid}}-pickfiles',
 				max_file_size : '100mb',
 				url : '{% block upload_url %}{{baseurl}}system/plupload/upload/file/{% endblock upload_url %}',
