Documentation updates, added support for test notices.
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@302 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/app/view/update/update-test.html
+++ b/app/view/update/update-test.html
@@ -13,6 +13,13 @@
 			</div>
 		{% endforeach %}
 
+        <span class="badge badge-invert" style="cursor: pointer;" onclick="$('.notices').toggleClass('hide');">{{testnotices|count}} notices</span><br/><br/>
+        {% foreach testnotices as notice %}
+        <div class="alert alert-info notices hide">
+            {{notice}}
+        </div>
+        {% endforeach %}
+
 		<span class="badge badge-success">{{test.Results|count}} tests succeeded</span><br/><br/>
 		{% foreach test.Results as Result %}
 			<div class="alert alert-success">
