Bugfixes térkép. [deploy: nextwave]
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@331 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/plugins/_jquery/view/field/map.field.html
+++ b/plugins/_jquery/view/field/map.field.html
@@ -1,6 +1,15 @@
 <!-- load up map.js -->
 <script src="//maps.google.com/maps/api/js?sensor=true"></script>
 <script src="{{baseurl}}system/js/gmap/gmap-0.3.2.js"></script>
+<style>
+/** Maps fixes for bootstrap **/
+#map_basemap img {
+  max-width: none;
+}
+#map_basemap label {
+  width: auto; display:inline;
+}
+</style>
 
 <input type="hidden" name="{{field.name}}[lat]" value="{{field.value.lat}}">
 <input type="hidden" name="{{field.name}}[lng]" value="{{field.value.lng}}">
