Bugfixes térkép. [deploy: nextwave]
git-svn-id: https://outlast.svn.beanstalkapp.com/mozajik-private/trunk/system@332 1177bc47-7a3e-47f4-a2ea-9a189b2012c5

--- a/plugins/_jquery/view/field/map.field.html
+++ b/plugins/_jquery/view/field/map.field.html
@@ -3,10 +3,10 @@
 <script src="{{baseurl}}system/js/gmap/gmap-0.3.2.js"></script>
 <style>
 /** Maps fixes for bootstrap **/
-#map_basemap img {
+#map_{{field.uid}} img {
   max-width: none;
 }
-#map_basemap label {
+#map_{{field.uid}} label {
   width: auto; display:inline;
 }
 </style>
