--- a/plugins/_jquery/view/field/serialized.field.html
+++ b/plugins/_jquery/view/field/serialized.field.html
@@ -1,16 +1,16 @@
 	<div id='{{field.id}}'>
 	{% if field.value %}
 		{% foreach field.value as val %}
-			<label><input class='field text' type='text' name='{{field.name}}[]' value='{{val|escape}}'> <a href="#delete" onclick="$(this).getParent('label').destroy();">X</a></label>
+			<label><input class='field text' type='text' name='{{field.name}}[]' value='{{val|escape}}'> <a href="#delete" onclick="$(this).parent('label').remove();">X</a></label>
 		{% endforeach %}
 	{% endif %}
 	</div>
-	<a class="icon tiny add" onclick="add_field_{{field.uid}}();">New</a>
+	<a class="btn btn-success btn-mini" onclick="add_field_{{field.uid}}();">New</a>
 	
 	<script language="javascript">
 		function add_field_{{field.uid}}(){
-			var div = new Element('label');
-			div.set('html', "<input class='field text' type='text' name='{{field.name}}[]' value=''> <a href=\"#delete\" onclick=\"$(this).getParent('label').destroy();\">X</a>");
-			$('{{field.id}}').appendChild(div);
+			var div = $('<label></label>');
+			div.html("<input class='field text' type='text' name='{{field.name}}[]' value=''> <a href=\"#delete\" onclick=\"$(this).parent('label').remove();\">X</a>");
+			$('#{{field.id}}').append(div);
 		}
 	</script>
