--- a/site/css/mozajik-system.css
+++ b/site/css/mozajik-system.css
@@ -10,8 +10,8 @@
 	h1 { font-size: 30px; text-shadow: 1px 1px white; margin-left: -30px; }
 	h2 { font-size: 20px; margin-top: 40px; margin-left: -20px; }
 	
-	a, a:active, a:not(.btn):visited{ color: #3F6A23; }
-	a:hover{ color: #333333; }
+	/*a, a:active, a:not(.btn):visited{ color: #3F6A23; }
+	a:hover{ color: #333333; }*/
 
 	input { outline: none; }	
 	
