--- a/app/view/base-system.html
+++ b/app/view/base-system.html
@@ -5,8 +5,8 @@
 		
 		{% block bootstrapstyles %}
 		<!-- bootstrap -->
-		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/css/bootstrap-responsive.min.css">
+		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/2.3.1/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="{{baseurl}}system/css/bootstrap/2.3.1/css/bootstrap-responsive.min.css">
 		{% endblock bootstrapstyles %}
 
 		{% block mozajikstyles %}
