Adding single photo field.

--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -13,6 +13,7 @@
 <div id="{{field.id}}-uploadbutton"></div>
 <div id="{{field.id}}-errors"></div>
 <div class="foto" id="{{field.uid}}-filelist">
+	{{field.value.id}}
 </div>
 <input type="hidden" name="{{field.name}}" id="{{field.uid}}">
 
