--- a/plugins/_jquery/view/field/timestamp.field.html
+++ b/plugins/_jquery/view/field/timestamp.field.html
@@ -10,11 +10,11 @@
 <link rel="stylesheet" href="{{baseurl}}system/css/bootstrap/2.3.1/css/bootstrap-picker.min.css"/>
 
 <div class="input-append bootstrap-datepicker">
-	<input name="{{field.id}}[date]" class="input-small" type="text" id="{{field.uid}}-date">
+	<input name="{{field.id}}[date]" class="input-small" type="text" id="{{field.uid}}-date" value="{{field.value|date:'Y.m.d.'}}">
 	<span class="add-on" onclick="jQuery('#date').datepicker('show');"><i class="icon-th"></i></span>
 </div>
 <div class="input-append bootstrap-timepicker"><div class="bootstrap-timepicker-widget dropdown-menu"><table><tbody><tr><td><a href="#" data-action="incrementHour"><i class="icon-chevron-up"></i></a></td><td class="separator">&nbsp;</td><td><a href="#" data-action="incrementMinute"><i class="icon-chevron-up"></i></a></td></tr><tr><td><input type="text" name="hour" class="bootstrap-timepicker-hour" maxlength="2"></td> <td class="separator">:</td><td><input type="text" name="minute" class="bootstrap-timepicker-minute" maxlength="2"></td> </tr><tr><td><a href="#" data-action="decrementHour"><i class="icon-chevron-down"></i></a></td><td class="separator"></td><td><a href="#" data-action="decrementMinute"><i class="icon-chevron-down"></i></a></td></tr></tbody></table></div>
-	<input name="{{field.id}}[time]" class="input-small" id="{{field.uid}}-time" type="text">
+	<input name="{{field.id}}[time]" class="input-small" id="{{field.uid}}-time" type="text" >
 	<span class="add-on"><i class="icon-time"></i></span>
 </div>
 
