--- a/plugins/_jquery/view/field/serialized.field.html
+++ b/plugins/_jquery/view/field/serialized.field.html
@@ -1,16 +1,17 @@
-	<div id='{{field.id}}'>
-	{% if field.value %}
-		{% foreach field.value as val %}
-			<label><input class='field text' type='text' name='{{field.name}}[]' value='{{val|escape}}'> <a href="#delete" onclick="$(this).parent('label').remove();">X</a></label>
-		{% endforeach %}
-	{% endif %}
-	</div>
-	<a class="btn btn-success btn-mini" onclick="add_field_{{field.uid}}();">New</a>
-	
+<!-- A key/value object editor for json fields -->
+	<div id='{{field.uid}}'></div>
+	<a class="btn btn-mini btn-success" onclick="add_field_{{field.uid}}('', '');">Új elem</a>
+
 	<script language="javascript">
-		function add_field_{{field.uid}}(){
-			var div = $('<label></label>');
-			div.html("<input class='field text' type='text' name='{{field.name}}[]' value=''> <a href=\"#delete\" onclick=\"$(this).parent('label').remove();\">X</a>");
-			$('#{{field.id}}').append(div);
+		function add_field_{{field.uid}}(key, val){
+			var el = $("<div class='alert alert-info'><input class='field text input-mini' type='text' name='{{field.name}}[value][]' placeholder='Kulcs' value='"+val+"'> - <input class='field text input-small' type='text' name='{{field.name}}[key][]' placeholder='Érték' value='"+key+"'> <a class='close' href='#delete' onclick=\"$(this).parents('div.alert').first().remove();\">&times;</a></div>");
+			$('#{{field.uid}}').append(el);
 		}
+		{% if field.value %}
+			zaj.ready(function(){
+				{% foreach field.value as val %}
+					add_field_{{field.uid}}('{{forloop.key|escapejs}}', '{{val|escapejs}}');
+				{% endforeach %}
+			});
+		{% endif %}
 	</script>
