Rte requires window.load instead of document.ready.

--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -19,7 +19,7 @@
 </div>
 
 <script>
-	zaj.ready(function () {
+	$(window).load(function () {
 		var $rte = $('#{{field.uid}}-rte');
 		$rte.olrte();
 		$rte.bind('ol.rte.blur', function(ev, content){ $('#{{field.uid}}').html(content); });
