--- a/plugins/_jquery/view/field/photo.field.html
+++ b/plugins/_jquery/view/field/photo.field.html
@@ -1,7 +1,7 @@
 <!-- requires jquery! ONLY FOR A SINGLE PHOTO!!!! -->
 <script language="JavaScript" src="{{baseurl}}system/js/plupload/plupload.full.js" type="text/javascript"></script>
 
-<a id="{{field.uid}}-pickfiles" class="btn" style="cursor: pointer;" href="#"><i class="icon-folder-open"></i> Browse</a>
+<a id="{{field.uid}}-pickfiles" class="btn" style="cursor: pointer;" href="#"><i class="icon-folder-open"></i> Kép kiválasztása</a>
 
 <div id="{{field.uid}}-transferbar" class="hidden progress progress-striped active">
   <div class="bar" style="width: 0%;"></div>
