Add Bootstrap 3.1 support for zaj.alert().

--- a/plugins/_jquery/view/field/manytoone.field.html
+++ b/plugins/_jquery/view/field/manytoone.field.html
@@ -1,4 +1,4 @@
-<select class='field text' type='text' id='{{field.id}}' name='{{field.name}}'>
+<select class='ofw-field-manytoone form-control' type='text' id='{{field.id}}' name='{{field.name}}'>
 	<option value=''>--</option>
 	{% foreach field.choices as choice %}
 		<option {% if choice.id eq field.value.id %}selected="selected"{% endif %} value='{{choice.id}}'>{{choice.name}}</option>
