--- a/plugins/_jquery/view/field/text.field.html
+++ b/plugins/_jquery/view/field/text.field.html
@@ -1,1 +1,1 @@
-<input class='field text' type='text' id='{{field.id}}' name='{{field.name}}' value='{{field.value|escape}}'>
+<input class='ofw-field-text form-control' type='text' id='{{field.id}}' name='{{field.name}}' value='{{field.value|escape}}'>
