--- a/plugins/_jquery/view/field/manytomany.field.html
+++ b/plugins/_jquery/view/field/manytomany.field.html
@@ -2,12 +2,17 @@
 <script src="{{baseurl}}system/js/chosen/chosen.jquery.min.js"></script>
 <link rel="stylesheet" href="{{baseurl}}system/css/chosen/chosen.css">
 <!-- Display markup -->
-<select width="100%" data-placeholder="--" id="{{field.uid}}" name="{{field.name}}" multiple>
+<select width="100%" data-placeholder="--" id="{{field.uid}}" name="{{field.name}}[]" multiple>
     <option value="">--</option>
     {% foreach field.choices as val %}
-        <option id='{{val.id}}'>{{val.name}}</option>
+        <option value='{{val.id}}'>{{val.name}}</option>
     {% endforeach %}
 </select>
 <script>
-    $('#{{field.uid}}').chosen({width: '100%'});
+    zaj.ready(function(){
+        {% foreach field.value as sitem %}
+            $('option[value="{{sitem.id}}"]').select();
+        {% endfor %}
+        $('#{{field.uid}}').chosen({width: '100%'});
+    });
 </script>
